# autogen-construction-schedule-system

./: .env.example  .gitignore  LICENSE  README.md  README_EN.md  pyproject.toml
config/: agents.yaml  events.yaml  model.yaml  paths.yaml
data/templates/: parameter_checklist_template.xlsx
docs/workflow/: interface_contract.md  planning_agent_io_examples.md  real_case_data_flow.md  runbook.md  schedule_generation.md  schedule_handoff.md  validation_agent_io_examples.md  wbs_resource_notes.md
src/: __init__.py  config_loader.py  main_event_demo.py  main_generate_demo.py  main_initial_schedule.py  main_real_case_workflow.py  visualize_schedule.py
src/agentchat_runtime/: __init__.py  exceptions.py  model_factory.py  output_writer.py  workflow.py
src/agents/: base_agent.py  constraint_checker_agent.py  coordinator_agent.py  data_parser_agent.py  dynamic_responder_agent.py  plan_arbiter_agent.py  resource_allocator_agent.py  wbs_planner_agent.py
src/blackboard/: __init__.py  excel_store.py  sheet_schema.py  validators.py
src/communication/: __init__.py  event_topics.py  message_logger.py  message_schema.py  router.py
src/tests/: helpers.py  test_agent_smoke.py  test_agentchat_runtime.py  test_case_context.py  test_dwg_tools.py  test_excel_store.py  test_generation_agents.py  test_initial_schedule.py  test_message_schema.py  test_real_document_parsing.py  test_validation_adjustment_agents.py  test_visualization_tools.py  test_workflow_integration.py
src/tools/: __init__.py  case_context.py  constraint_tools.py  cpm_tools.py  document_tools.py  dwg_tools.py  (+8 more)
