[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autogen-schedule-system"
version = "0.1.0"
description = "AutoGen multi-agent workflow for construction schedule planning."
requires-python = ">=3.10"
dependencies = [
  "autogen-agentchat>=0.7.5",
  "autogen-ext[openai,azure]>=0.7.5",
  "openpyxl>=3.1.0",
  "matplotlib>=3.8.0",
  "networkx>=3.2.0",
  "numpy>=1.26.0",
  "pypdf>=4.0.0",
  "PyYAML>=6.0",
  "pywin32>=306; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "black>=24.0",
  "ruff>=0.5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
